--- a/documentation/asciidoc/topics/proc_adding_credentials.adoc
+++ b/documentation/asciidoc/topics/proc_adding_credentials.adoc
@@ -1,5 +1,5 @@
 [id='adding_credentials-{context}']
-= Adding Custom Credentials
+= Adding Custom User Credentials
 Configure access to {brandname} cluster endpoints with custom credentials.
 
 .Procedure
