--- a/documentation/asciidoc/topics/ref_default_credentials.adoc
+++ b/documentation/asciidoc/topics/ref_default_credentials.adoc
@@ -7,9 +7,9 @@
 
 |`developer`
 |`{example_crd_name}-generated-secret`
-|Default application user.
+|Credentials for the default application user.
 
 |`operator`
 |`{example_crd_name}-generated-operator-secret`
-|User that interacts with {brandname} resources.
+|Credentials that {ispn_operator} uses to interact with {brandname} resources.
 |===
