--- a/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
+++ b/documentation/asciidoc/stories/assembly_configuring_authentication.adoc
@@ -8,6 +8,7 @@ You can use default, generated credentials or add your own.
 include::{topics}/ref_default_credentials.adoc[leveloffset=+1]
 include::{topics}/proc_retrieving_credentials.adoc[leveloffset=+1]
 include::{topics}/proc_adding_credentials.adoc[leveloffset=+1]
+include::{topics}/proc_changing_operator_password.adoc[leveloffset=+1]
 include::{topics}/proc_disabling_authentication.adoc[leveloffset=+1]
 
 // Restore the parent context.
