--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -14,4 +14,5 @@ include::{stories}/assembly_logging.adoc[leveloffset=+1]
 include::{stories}/assembly_backing_up_restoring.adoc[leveloffset=+1]
 include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_deploying_code.adoc[leveloffset=+1]
+include::{stories}/assembly_eventing.adoc[leveloffset=+1]
 include::{stories}/assembly_reference.adoc[leveloffset=+1]
