--- a/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
+++ b/documentation/asciidoc/topics/proc_using_custom_encryption_secrets.adoc
@@ -15,10 +15,12 @@ Use custom PKCS12 keystore or TLS certificate/key pairs to encrypt connections b
 $ {oc_apply_cr} tls_secret.yaml
 ----
 +
-. Specify the encryption secret with `spec.security.endpointEncryption` in your
-`Infinispan` CR and then apply the changes.
+. Specify the encryption secret with the `spec.security.endpointEncryption.certSecretName` field in your
+`Infinispan` CR.
 +
 [source,options="nowrap",subs=attributes+]
 ----
 include::yaml/encryption_custom_secret.yaml[]
 ----
++
+. Apply the changes.
