set the right path for include

--- a/documentation/asciidoc/topics/ref_cache_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cache_service_resources.adoc
@@ -3,7 +3,7 @@
 
 [source,options="nowrap",subs=attributes+]
 ----
-include::{topics}/yaml/cache_service.yaml[]
+include::yaml/cache_service.yaml[]
 ----
 
 [%header,cols=2*]
