--- a/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_datagrid_service_resources.adoc
@@ -3,7 +3,7 @@
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
-include::{topics}/yaml/datagrid_service.yaml[]
+include::yaml/datagrid_service.yaml[]
 ----
 
 [%header,cols=2*]
