--- a/documentation/asciidoc/topics/proc_batching_create_configmap.adoc
+++ b/documentation/asciidoc/topics/proc_batching_create_configmap.adoc
@@ -18,7 +18,7 @@ $ mkdir -p /tmp/mybatch
 [source,options="nowrap",subs=attributes+]
 ----
 $ cat > /tmp/mybatch/mycache.xml<<EOF
-include::xml/mycache_dist_sync.xml[]
+include::xml/dist-sync-cache.xml[]
 EOF
 ----
 
